<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2025 Bitsea GmbH
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https:www.apache.orglicensesLICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~  SPDX-License-Identifier: Apache-2.0
  ~  License-Filename: LICENSE
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>
    <modules>
        <module>occtet-common</module>
        <module>occtet-ort-client</module>
        <module>occtet-common-jpa</module>
        <module>occtet-nats-template</module>
        <module>occtet-nats-subscriber-sample</module>
        <module>occtet-nats-spdx-service</module>
        <module>occtet-nats-spdx-export-service</module>
        <module>occtet-nats-licensematcher-service</module>
        <module>occtet-nats-ai-licensematcher-service</module>
        <module>occtet-nats-foss-report-service</module>
        <module>occtet-nats-ai-copyrightfilter-service</module>
        <module>occtet-nats-copyrightfilter-service</module>
        <module>occtet-nats-vulnerability-service</module>
        <module>occtet-nats-process-run-service</module>
        <module>occtet-nats-ort-run-start-service</module>
        <module>occtet-nats-download-service</module>
        <module>occtet-nats-cyclonedx-service</module>
        <module>occtet-nats-cyclonedx-export-service</module>
    </modules>

    <groupId>eu.occtet.boc</groupId>
	<artifactId>occtet-nats-parent</artifactId>
	<version>0.3.8-SNAPSHOT</version>

	<name>occtet-nats-parent</name>

	<!-- TODO: description, url, licenses -->

	<!-- TODO: developers -->

	<!-- TODO: scm, issueManagement, ciManagement -->

	<properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>3.5.5</springboot.version>
        <eclipselink.version>4.0.9</eclipselink.version>
        <common-jpa-version>0.3.20-SNAPSHOT</common-jpa-version>
        <common-version>0.3.18-SNAPSHOT</common-version>
        <ort-client-version>0.3.3-SNAPSHOT</ort-client-version>
        <logback-version>1.5.19</logback-version>
        <logback-db-version>1.2.11.1</logback-db-version>
        <postgresql.version>42.7.8</postgresql.version>
        <h2db.version>2.3.232</h2db.version>
	</properties>

	<dependencies>
		<!-- ... -->
	</dependencies>
</project>
